# SniperBot

./: .env  check_contracts.py  check_feed.py  debug_upstox_api.py  docker-compose.yml  init_schema.py  main.py  pyproject.toml  test_morning_setup.py  test_resampler.py  test_strategy.py
app/: main.py
app/core/: config.py  database.py  redis_client.py  utils.py
app/services/: contract_manager.py  feed_service.py  morning_setup.py
app/worker/: resampler.py  strategy.py
