[project]
name = "sniperbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "pytz>=2025.2",
    "redis>=7.1.0",
    "upstox-python-sdk>=2.19.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
